# benchmark-fibo

./: .envrc-example  .gitignore  .ignore  Cargo.toml  Justfile  README.md  dev-deps.txt  flake.nix  obelisk-go-oci.toml  obelisk-go.toml  obelisk-js-native-oci.toml  obelisk-js-native.toml  obelisk-js-oci.toml  obelisk-js.toml  obelisk-py-oci.toml  obelisk-py.toml  obelisk-rs-oci.toml  obelisk-rs-spawn-oci.toml  obelisk-rs-spawn.toml  obelisk-rs.toml  obelisk.toml  requirements.txt  rust-toolchain.toml  server-spawn.toml  server.toml
.github/workflows/: check-verify.yml  check.yml  push-components.yml  scheduled-bump-cargo-lock.yml  sync-flake-lock.yml
activity/go/: go.mod  main.go
activity/go/wit/: impl.wit
activity/js/: package-lock.json  package.json
activity/js-native/: fibo.js
activity/js/src/: index.js
activity/py/: app.py  build.sh
activity/py/wit/: world.wit
activity/rs/: Cargo.toml
activity/rs-spawn/: Cargo.toml
activity/rs-spawn/src/: lib.rs
activity/rs-spawn/wit/: impl.wit
activity/rs/src/: lib.rs
activity/rs/wit/: impl.wit
activity/wit-interface/: dummy.wit
activity/wit-interface/benchmark-fibo_activity/: fiboa.wit
scripts/: build-components-go.sh  build-components-js.sh  dev-deps.sh  fiboa-rs-spawn.sh  obelisk-generate-extensions.sh  obelisk-generate-wit-extensions.sh  push-components.sh
workflow/go/: go.mod  main.go
workflow/go/wit/: impl.wit
workflow/js/: package-lock.json  package.json
workflow/js-native/: fiboa.js  fiboa_concurrent.js
workflow/js/src/: index.js
workflow/js/wit/: impl.wit
workflow/py/: app.py  build.sh
workflow/py/wit/: impl.wit
workflow/rs/: Cargo.toml
workflow/rs/src/: lib.rs
workflow/rs/wit/: impl.wit
workflow/wit-interface/: dummy.wit
(+1 files in other folders)
