[workspace]
resolver = "2"
members = ["activity/rs", "activity/rs-spawn", "bin/native", "workflow/rs"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
wasip2 = "1.0.1"
wit-bindgen = "0.47.0"
wstd = "0.5.6"

[profile.release]
overflow-checks = true
lto = "fat"
opt-level = "s"
codegen-units = 1

[profile.release_bin]
inherits = "release"
overflow-checks = false
strip = "symbols"
opt-level = 3


[profile.release_activity]
inherits = "release"
strip = "debuginfo"

[profile.release_workflow]
inherits = "release"
debug = "line-tables-only"
