[workspace]
resolver = "2"
members = ["activity/rs", "activity/rs-spawn", "bin/native", "workflow/rs"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
wasip2 = "1.0.1"
wit-bindgen = "0.47.0"
wstd = "0.6.3"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[profile.release_bin]
inherits = "release"
opt-level = 2

[profile.release_activity]
inherits = "release"
opt-level = "s"

[profile.release_workflow]
inherits = "release"
opt-level = "s"
